# jot.lua

./:  jot-scm-1.rockspec  .busted  .editorconfig  .envrc  .gitattributes  .gitignore  .gitmodules  .luacheckrc  .luarc.json  .markdownlint.yaml  .mod.lua  .neoconf.json  .null-ls_791419_flake.nix  .stylua.toml  .styluaignore  @  CHANGELOG.md  Justfile  LICENSE  Makefile  README.md  TODO.md  dorm-scm-1.rockspec  dorm.yml  down  down-lsp  down-scm-1.rockspec  flake.nix  init.lua  jot-scm-1.rockspec  rclua  readme.dn  selene.toml  test.dd  vim.toml  word  word-lsp  word-scm-1.rockspec  word.yml
.github/: CODEOWNERS  FUNDING.yml  copilot-instructions.md  copilot-prompts.md
.github/ISSUE_TEMPLATE/: config.yml  new-feature-request.md
.github/workflows/: book.yml  docs.yml  format.yml  luarocks.yml  nix.yml  release.yml  test.yml
.icon/: module.lua  util.lua
assets/: versions.json
assets/helix/: languages.toml
assets/snippets/: README.md
assets/template/: README.md
autoload/: health.lua  jot.lua  word.lua
book/: book.toml
book/src/: SUMMARY.md  index.md  intro.md  modules.md
doc/: dorm.lua.txt  dorm.md  dorm.txt  tags  word.lua.txt  word.md  word.txt
docs/src/: SUMMARY.md
ext/dlsp/: Cargo.toml  LICENSE
ext/dlsp/.cargo/: config.toml
ext/dlsp/lib/serve/: Cargo.toml
lib/word/: word.jl  (+1 more)
lua/: down.lua  init.lua  jot.lua  word.lua
plugin/: jot.lua  word.lua
scripts/: build  doc.lua  docs  gen  gendocs.lua  install.sh  lint  logchg.py  logrel.py  release.sh  test  test.sh
syntax/: jot.vim  word.vim
test/: init.lua  minit.lua  test.lua  test.md
(+762 files in other folders)
