[workspace]
resolver = "2"
members = ['./lib/client', "./lib/serve"]
exclude = []

[workspace.package]
name = "down-lsp"
version = "0.1.0"
license = "MIT"
license-file = "./LICNESE"
readme = "./README.md"
authors = [
  "Chris Pecunies <clp@clp.is>"
]
edition = "2021"

[workspace.metadata]


[workspace.dependencies]
tokio = { version = "1.42.0", features = ["full"] }
tower-lsp = { version = "0.20.0", features = ["tokio", "tokio-util"] }
tower = { version = "0.5.1", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["full"] }
